--- a/changelog
+++ b/changelog
@@ -1,4 +1,4 @@
-02/23/2012 *0.3 Build 208*
+02/23/2012 *0.3 Build 212*
 --------------------------
 
 * Added to CAAT.Scene the following methods:
@@ -12,7 +12,7 @@
        the actor from every list in which appears.
 * Fixed Actor.setImageTransformation( CAAT.SpriteImage.prototype.TR_TILE ) which didn't honor actor position and offset
   to appropriately place the tiling image. Also the performance sink when using this flag with huge actors's been fixed.
-
+* Fixed an issue when entering scene gets mouse input.
 
 02/21/2012 *0.3 Build 180*
 --------------------------
