--- a/changelog
+++ b/changelog
@@ -1,3 +1,14 @@
+*03/13/2012 0.3 Build 264*
+--------------------------
+
+* Fixed TR_TILE semantics on CSS which prevented to shift properly with a call to setImageOffset.
+* Fixed template with splash when using CSS renderer.
+* Changed demo16 masking.
+* Fixed some code ambiguities at Font object.
+* Added onError function to imagepreloader object.
+* Changed tutorial 1 info.
+* Changed tutorial 2.1 Input.
+
 02/27/2012 *0.3 Build 230*
 --------------------------
 
