--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+*03/13/2012 0.3 Build 266*
+--------------------------
+
+* Merged Karl Westin pull requests.
+
+
 *03/13/2012 0.3 Build 264*
 --------------------------
 
