--- a/changelog
+++ b/changelog
@@ -1,8 +1,8 @@
-*03/13/2012 0.3 Build 266*
+*03/13/2012 0.3 Build 279*
 --------------------------
 
 * Merged Karl Westin pull requests.
-
+* Fixed CAAT.Actor with sprite sheet on CSS renderer which didn't update the sprite index based on time.
 
 *03/13/2012 0.3 Build 264*
 --------------------------
