--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+*05/07/2012 0.4 Build 81 *
+--------------------------
+
+* Fist multitouch version. Check CAAT.TOUCH_BEHAVIOR= CAAT.TOUCH_AS_MULTITOUCH
+
+
 *05/06/2012 0.4 Build 66 *
 --------------------------
 
