--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+
+* Created CAAT.currentDirector which always points to the current rendering director. If queried from any CAAT managed
+  method it will point to a valid object.
+* Create CAAT.getCurrentScene() function. Gets current Director's current Scene.
+* Added more documentation.
+
+
 *05/10/2012 0.4 Build 96 *
 --------------------------
 
