--- a/changelog
+++ b/changelog
@@ -1,4 +1,4 @@
-* 08/30/2012 0.4 Build 271**
+* 08/30/2012 0.4 Build 275*
 ---------------------------
 
 * FIX. CAAT.Font padding value made fonts wider (added blank space).
@@ -7,6 +7,7 @@
 * CHANGE. CAAT.ActorContainer uses no more a Linked List to keep track of its active children. Certain situations
   made it loop forever (ie on input events).
 * FIX. Some methods on CAAT.Actor had been corrupted. WTF!!!.
+* ADD. CAAT.Actor.removeChildAt extra security check.
 
 * 08/27/2012 0.4 Build 255*
 ---------------------------
