--- a/changelog
+++ b/changelog
@@ -1,3 +1,8 @@
+* 09/11/2012 0.4 Build 299*
+---------------------------
+
+* CHANGE. Some demos have been changed to accomodate TextActors to the textAlignment.
+
 * 09/11/2012 0.4 Build 293*
 ---------------------------
 
