--- a/changelog
+++ b/changelog
@@ -3,7 +3,8 @@
 
 * FIX. https://github.com/hyperandroid/CAAT/issues/95
 * Added retina display support. Set CAAT.RETINA_DISPLAY_ENABLED=true before building director instances.
-
+* Added sprite animations.
+* Created demo31: sprite animation management.
 
 
 * This version is a major update. CAAT structure has been changed, but keeps backwards compatibility except
