* Added CAAT.CACHE_SCENE_ON_CHANGE which controls caching of entering/exiting scene. Set it before building director. * Added CAAT.PathUtil.SVGPath which parses an SVG path and creates a Path object. * Added demo32: CAAT.PathUtil.SVGPath sample.

--- a/changelog
+++ b/changelog
@@ -1,3 +1,8 @@
+* Added CAAT.CACHE_SCENE_ON_CHANGE which controls caching of entering/exiting scene. Set it before building director.
+* Added CAAT.PathUtil.SVGPath which parses an SVG path and creates a Path object.
+* Added demo32: CAAT.PathUtil.SVGPath sample.
+
+
 * 01/22/2013 0.5 Build 65 *
 ---------------------------
 
