* Added closed attribute to path objects. * Added thorough keyframing capabilities to CAAT.Behavior.Behavior classes. * Added functionality to CAAT.CSS object.

--- a/changelog
+++ b/changelog
@@ -1,6 +1,11 @@
 * Added CAAT.CACHE_SCENE_ON_CHANGE which controls caching of entering/exiting scene. Set it before building director.
 * Added CAAT.PathUtil.SVGPath which parses an SVG path and creates a Path object.
 * Added demo32: CAAT.PathUtil.SVGPath sample.
+* Added parsing capabilities to CAAT.Behavior.*Behavior and CAAT.Behavior.Interpolator objects.
+* Added demo33: on-the-fly CSS3 key-frame info generation from Behavior objects.
+* Added closed attribute to path objects.
+* Added thorough keyframing capabilities to CAAT.Behavior.Behavior classes.
+* Added functionality to CAAT.CSS object.
 
 
 * 01/22/2013 0.5 Build 65 *
